<resources>
    <string name="app_name">LayoutProject</string>
    <string name="title">This is my layout project</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="btn3">Button 3</string>
    <string name="check1">Check Box 1</string>
    <string name="check2">Check Box 2</string>
    <string name="check3">Check Box 3</string>
    <string name="check4">Check Box 4</string>
    <string name="check5">Check Box 5</string>
    <string name="check6">Check Box 6</string>
    <string name="smileyface">Smiley Face</string>
</resources>